[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-memory-substrate"
version = "0.1.0"
description = "Early-stage Python prototype for a cognitive memory substrate."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Travis Papenbrock" }
]
license = { text = "PolyForm Noncommercial License 1.0.0 with Commons Clause" }
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "flake8>=7.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["."]
omit = [
  "tests/*",
  "setup.py"
]
